--- a/vps.conf
+++ b/vps.conf
@@ -3,7 +3,7 @@ server {
   server_name  127.0.0.1 localhost;
   access_log /var/log/nginx/vps-access.log;
   error_log /var/log/nginx/vps-error.log error;
-  root   /home/vps/public_html;
+  root   /usr/share/m4rshall;
 
   location / {
     index  index.html index.htm index.php;
